test/errors/indexed_offsets_error/zs/ternary_operator_in_array_expression_error.zs
package ternary_operator_in_array_expression_error;

struct TernaryOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index > 0 ? 1 : 0]:
    string fields[];
};
